# multimedia_scanner

./: .gitignore  CMakeLists.txt  README.md  multimedia_extensions.json
src/: CMakeLists.txt  defines.hpp  main.cpp
src/http_server/: http_server.cpp  http_server.hpp
src/iterator/: iterator.cpp  iterator.hpp
src/json_reporter/: json_reporter.cpp  json_reporter.hpp
src/scanner/: scanner.cpp  scanner.hpp
src/socket/: socket.cpp  socket.hpp
